# mini-player

./: Cargo.toml  README.md  main.rs  scene.slint
